[package]
name = "avl-map"
version = "0.1.0"
authors = ["Alexey Ivushkin <ivushkinalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "*"
criterion = "0.3"

[[bench]]
name = "main_bench"
harness = false
